Inv Sync changes