@@ -30,6 +30,8 @@ public class IndgManageFullSyncStatus extends AbstractCustomApi {
  */
   @Override
   public YFCDocument invoke(YFCDocument inXml) {
+    
+    
     int initialSleepTime = Integer.parseInt(getProperty(INITIAL_SLEEP_TIME));
     try {
       Thread.sleep(initialSleepTime);
@@ -61,7 +63,7 @@ public class IndgManageFullSyncStatus extends AbstractCustomApi {
    */
   private void sleepTillEOF() {
     int deltaSleepTime = Integer.parseInt(getProperty(DELTA_SLEEP_TIME));
-    String myShellScript = "nohup /Indigo/OMS95/Foundation/bin/startIntegrationServer.sh Indg_Category_File \"-Xms512m -Xmx2048m -XX:MaxPermSize=512m\" > /Indigo/OMS95/Foundation/logs/Indg_Category_File_${date}.log &";  
+    String myShellScript = "./startServer.sh";
     try {
       Thread.sleep(deltaSleepTime);
       YFCDocument fullSyncStatusList = isFullSyncCompleted();
